--- a/Website2.0/mainpage.css
+++ b/Website2.0/mainpage.css
@@ -1,15 +1,25 @@
-body {
+body,html {
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
-@media (min-width: 768px) {}
+@media (max-width: 768px) {
+    .header-content, .navbar, .user-actions {
+        flex-direction: column;
+    }
+    .logo, .title, .logo-text {
+        margin: 0 auto; /* Center these elements */
+    }
+    .container, .room-container, .hotel-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
 
-@media (max-width: 767px) and (min-width: 481px) {}
 
-@media (max-width: 480px) {}
 
 header {
     background-color: #00134D;
@@ -55,16 +65,12 @@ header h1 {
     flex-wrap: wrap;
 }
 
-#image-carousel {
-    width: 109vw;
-    overflow: hidden;
-    margin-top: 5px;
-}
 
 #image-slider {
     display: flex;
-    transition: transform 0.5s ease-in-out;
-    margin-right: 144px;
+    padding: 19px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 .carousel-item {
@@ -74,18 +80,17 @@ header h1 {
     overflow: hidden;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transition: transform 0.5s ease-in-out;
+    
+    
 }
 
-.carousel-item:hover {
-    transform: scale(1.1);
-}
 
 .carousel-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 8px 8px 0 0;
+    
 }
 
 .navbar {
@@ -183,7 +188,7 @@ header h1 {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 90%;
     margin: 20px;
     padding: 20px;
     background-color: #fff;
@@ -208,11 +213,12 @@ header h1 {
     margin-top: -100px;
     display: flex;
     margin: 20px 0;
-    gap: 15px;
-    margin-right: 250px;
+    gap: 20px;
+    margin-right: 190px;
     margin-left: 600px;
-    margin-top: -160px;
+    margin-top: -180px;
     transition: transform 0.5s ease-in-out;
+     
 }
 
 .hotel-container img {
@@ -293,21 +299,6 @@ header h1 {
     transition: transform 0.5s ease-in-out;
 }
 
-.hotel-container:hover,
-.rooms-container:hover {
-    transform: scale(1.05);
-}
-
-.hotel-container img,
-.rooms-container img {
-    transition: transform 0.5s ease-in-out;
-}
-
-.hotel-container img:hover,
-rooms-container img:hover {
-    transform: scale(1.05);
-}
-
 .amenities-container {
     display: flex;
     justify-content: space-around;
@@ -337,9 +328,7 @@ rooms-container img:hover {
     transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.widget:hover {
-    transform: scale(1.1);
-}
+
 
 .widget h2 {
     margin-bottom: 5px;
@@ -354,9 +343,7 @@ rooms-container img:hover {
     margin-top: 10px;
 }
 
-.widget:hover img {
-    transform: scale(1.1);
-}
+
 
 .amenities-shadow-container {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -511,6 +498,8 @@ footer nav ul li {
     width: 48%;
     box-sizing: border-box;
     margin-top: -355px;
+    position: relative;
+    
 }
 
 @media (max-width: 768px) {
@@ -754,3 +743,6 @@ footer nav ul li {
     margin-left: 700px;
     margin-top: -860px;
 }
+
+
+
