--- a/styles.css
+++ b/styles.css
@@ -425,6 +425,12 @@ footer p {
     margin-top: 100px;
     border-radius: 10px;
 }
+.projectss5-images img {
+    width: 19%;
+    height: 100px;
+    margin-top: 100px;
+    border-radius: 10px;
+}
 
 
 footer2 {
